# C16-eval

./: .gitattributes
projects/LPC/: .clang-format  CMakeLists.txt  README.md  clang-format_all.bat  dos2unix_all.bat
projects/LPC/firmware/: .gitignore
projects/LPC/firmware/ld/: LPC4322_co-proc.ld  LPC4322_main.ld  co-proc.ld  co-proc_memory.ld  main.ld  main_library.ld  main_memory.ld
projects/LPC/firmware/src/co-proc/: .cproject  .project
projects/LPC/firmware/src/co-proc/src/: co-proc.c  cr_startup_lpc43xx-m0app.c
projects/LPC/firmware/src/co-proc/src/drv/: adc.h  kbs.c  kbs.h  nl_kbs.c  rit.h
projects/LPC/firmware/src/main/: .cproject  .project
projects/LPC/firmware/src/main/src/: CPU_clock.cpp  M4_error.h  cppbegin.inc  cr_cpp_config.cpp  cr_start_m0.c  cr_start_m0.h  cr_startup_lpc43xx.cpp  main.cpp
projects/LPC/firmware/src/main/src/drv/: EHC.h  IoPin.h  LRA.h  LRApatternIds.h  allIoPins.cpp  allIoPins.h  iopins.cpp  iopins.h
projects/LPC/firmware/src/main/src/sys/: ledErrorWarning.h  ledHeartBeatM4.h  stdlib.h  ticker.cpp  ticker.h  uart.h
projects/LPC/firmware/src/main/src/tasks/: adc.h  allIOpinsTask.h  allTasks.cpp  allTasks.h  allTimedIOpins.h  createDataObjects.h  encoderTask.h  keybedScanner.h  keybedScannerTask.h  (+15 more)
projects/LPC/firmware/src/shared/cmsis/: LPC43xx.h  lpc43xx_cgu.c  lpc43xx_cgu.h
projects/LPC/firmware/src/shared/drv/: nl_cgu.h
projects/LPC/firmware/src/shared/erp/: ERP_Decoder.h  ERP_Quantizer.c  ERP_Quantizer.h
projects/LPC/firmware/src/shared/io/: pin_setup.h  pins.h
projects/LPC/firmware/src/shared/ipc/: ipc.c  ipc.h
projects/LPC/firmware/src/shared/sys/: version.h
projects/LPC/tools/: CMakeLists.txt
projects/LPC/tools/erp-readout/: CMakeLists.txt
projects/LPC/tools/erp-readout/src/: interpol.c  interpol.h  main.c
projects/LPC/tools/lpc-tool/: CMakeLists.txt
projects/LPC/tools/lpc-tool/src/: main.cpp
projects/LPC/tools/test-serial/: CMakeLists.txt
projects/LPC/tools/test-serial/src/: main.cpp
(+30 files in other folders)
